--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'English literature -- History and criticism'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: Samuel Richardson -- Edward Gibbon -- William Cowper -- George Borrow
   -- Cardinal Newman -- Matthew Arnold -- William Hazlitt -- The letters of Charles
   Lamb -- Authors in court -- Nationality -- The Reformation -- Sainte-Beuve.
